make properties view work for custom components (beans) Case: SVY-6305