@@ -17,8 +17,9 @@
 package com.servoy.eclipse.designer.actions;
 
 import com.servoy.eclipse.designer.editor.VisualFormEditor;
-import com.servoy.eclipse.ui.property.PersistPropertySource;
+import com.servoy.eclipse.ui.property.PersistPropertyHandler;
 import com.servoy.j2db.persistence.RectShape;
+import com.servoy.j2db.server.ngclient.property.PropertyType;
 
 /**
  * Add a shape.
@@ -33,8 +34,9 @@ public class AddRoundedRectangleActionDelegate extends AbstractEditpartActionDel
 	public AddRoundedRectangleActionDelegate()
 	{
 		super(VisualFormEditor.REQ_PLACE_RECT_SHAPE);
-		addSetPropertyValue("shapeType",
-			PersistPropertySource.SHAPE_TYPE_CONTOLLER.getConverter().convertProperty("shapeType", Integer.valueOf(RectShape.ROUNDED_RECTANGLE)));
-		addSetPropertyValue("roundedRadius", new Integer(35));
+		addSetPropertyValue(
+			"shapeType",
+			Integer.valueOf(((PropertyType.ValuesConfig)PersistPropertyHandler.SHAPE_TYPE_VALUES.getConfig()).getRealIndexOf(Integer.valueOf(RectShape.ROUNDED_RECTANGLE))));
+		addSetPropertyValue("roundedRadius", Integer.valueOf(35));
 	}
 }
